[project]
name = "radiotox"
version = "0.1.0"
description = "Simple X-Ray CT reconstruction package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.6.0",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "tifffile>=2025.5.10",
]

[tool.setuptools.packages.find]
where = ["src"]
